--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@ iframe {
           </div>
 
         </div>
-
+<a href="https://vishal-solankii.github.io/VIshal-FullStackDeveloper.pdf" target="_blank" style="background: #149ddd;color: #fff;padding: 10px 20px;text-align: center;margin: auto;display: block;width: 200px;margin-top: 4%;border-radius: 7px;">Download Resume</a>
       </div>
 
     </section><!-- /Resume Section -->
