--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@ iframe {
             <img src="assets/img/Poster_My.jpg" class="img-fluid" alt="">
           </div>
           <div class="col-lg-8 content">
-            <h2>FullStack Developer &amp; WordPress Expert</h2>
+            <h2>Full Stack Developer &amp; WordPress Expert</h2>
             <p class="fst-italic py-3">
               Full-Stack || ReactJS || NextJS || NodeJS || WordPress || React-Native || MongoDB || PostgreSQL || MySQL 
             </p>
@@ -228,7 +228,7 @@ iframe {
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="200">
             <h3 class="resume-title">Professional Experience</h3>
             <div class="resume-item">
-              <h4>Full-Stack Engineer</h4>
+              <h4>Full Stack Developer</h4>
               <h5>2022 - Present</h5>
               <p><em>Lootmogul, USA </em></p>
               <ul>
@@ -239,12 +239,12 @@ iframe {
             </div><!-- Edn Resume Item -->
 
             <div class="resume-item">
-              <h4>Sr. Web Developer</h4>
+              <h4>Full Stack Developer</h4>
               <h5>2018 - 2022</h5>
               <p><em>Nivit Solution, India</em></p>
               <ul>
                 <li>Collaborated with clients to gather and understand requirements, ensuring alignment with project goals.</li>
-                <li>Developed and maintained e-commerce websites using WooCommerce, and custom CMS websites using WordPress.</li>
+                <li>Developed e-commerce websites using WooCommerce, and develop websites using ReactJs, NextJs WordPress.</li>
                 <li>Performed website speed optimization, provided web services, and handled website migration tasks.</li>
               </ul>
             </div><!-- Edn Resume Item -->
