Changes in Resume

--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@ iframe {
           </div>
 
         </div>
-<a href="https://vishal-solankii.github.io/VIshal-FullStackDeveloper.pdf" target="_blank" style="background: #149ddd;color: #fff;padding: 10px 20px;text-align: center;margin: auto;display: block;width: 200px;margin-top: 4%;border-radius: 7px;">Download Resume</a>
+<a href="https://vishal-solankii.github.io/Vishal_FullStackDeveloper2025.pdf" target="_blank" style="background: #149ddd;color: #fff;padding: 10px 20px;text-align: center;margin: auto;display: block;width: 200px;margin-top: 4%;border-radius: 7px;">Download Resume</a>
       </div>
 
     </section><!-- /Resume Section -->
@@ -492,13 +492,14 @@ iframe {
             </div>
           </div><!-- End Service Item -->
 
-          <div class="col-lg-4 col-md-6 service-item d-flex" data-aos="fade-up" data-aos-delay="500">
+          <!--<div class="col-lg-4 col-md-6 service-item d-flex" data-aos="fade-up" data-aos-delay="500">
             <div class="icon flex-shrink-0"><i class="bi bi-brightness-high"></i></div>
             <div>
               <h4 class="title"><a href="#" class="stretched-link">Search Engine Optimization (SEO)</a></h4>
               <p class="description">Will work directly with your website to improve search rankings and drive targeted traffic.</p>
             </div>
-          </div><!-- End Service Item -->
+          </div>-->
+          <!-- End Service Item -->
 
           <div class="col-lg-4 col-md-6 service-item d-flex" data-aos="fade-up" data-aos-delay="600">
             <div class="icon flex-shrink-0"><i class="bi bi-calendar4-week"></i></div>
