Changes in Summary

--- a/index.html
+++ b/index.html
@@ -197,11 +197,17 @@ iframe {
         <div class="row">
 
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
-            <h3 class="resume-title">Sumary</h3>
+             <h3 class="resume-title">Professional Summary</h3>
+
+            <div class="resume-item pb-0">
+              <h4>9+ Years Experiences</h4>
+              <p>Dynamic and results-oriented <b>Full Stack Developer</b> with 9+ years of expertise in web and mobile application development. Proficient in modern frameworks like <b>ReactJS, NextJS</b>, and backend solutions like NodeJS. Highly skilled in <b>WordPress/WooCommerce development</b>, custom theme/plugin creation, and CMS optimization. Experienced in delivering scalable ecommerce platforms, Agile methodologies, and fostering client relationships to meet project goals effectively.</p>
+            </div><!-- Edn Resume Item -->
+            
+            <h3 class="resume-title">Contact</h3>
 
             <div class="resume-item pb-0">
               <h4>Vishal Solanki</h4>
-              <p><em>With over 8 years of experience in web development, I specialize in ReactJS, NextJS, NodeJS, WordPress, and Shopify. After completing my master’s degree in 2015, I started working with various IT development companies and agencies. </em></p>
               <ul>
                 <li><b>Address : </b>Kosamba, Surat, Gujarat, India</li>
                 <li><b>Mobile : </b>+91 8141569185</li>
