--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@ iframe {
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
         <h2>Resume</h2>
-        <p>Worked as Full-Stack Developer | Experience in React, Redux, NextJS, React-Native, Node.js, WordPress, WooCommerce, Wix, Shopify, Strapi CMS, SQL, MongoDB, Docker, AWS, CleaverTab Integration</p>
+       <!-- <p>Worked as Full-Stack Developer | Experience in React, Redux, NextJS, React-Native, Node.js, WordPress, WooCommerce, Wix, Shopify, Strapi CMS, SQL, MongoDB, Docker, AWS, CleaverTab Integration</p> -->
       </div><!-- End Section Title -->
 
       <div class="container">
