--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@ iframe {
             <div class="resume-item">
               <h4>Full Stack Developer</h4>
               <h5>2022 - Present</h5>
-              <p><em>Lootmogul, USA </em></p>
+              <p><em>NextgenTM (Lootmogul), India </em></p>
               <ul>
                 <li>Successfully delivered web and mobile applications for AI Lootmogul, utilizing technologies such as ReactJS, NextJS, NodeJS, and React-Native. </li>
                 <li>Integrated additional platforms, including Strapi CMS, WordPress, WooCommerce,  SQL, PostgreSQL, and Jenkins.</li>
